--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div class="floatr navR">
 						<ul>
 							<li class="nActive">
-								<a href="###"  >首页</a>
+								<a href="index.html">首页</a>
 							</li>
 							<li>
 								<a href="###">业务中心</a>
@@ -45,7 +45,7 @@
 								<a href="###">投资者关系</a>
 							</li>
 							<li>
-								<a href="###">资讯中心</a>
+								<a href="center.html">资讯中心</a>
 							</li>
 							<li>
 								<a href="###">关于诗尼曼</a>
