--- a/server.html
+++ b/server.html
@@ -119,7 +119,32 @@
 									</li>
 									<li>
 										<div class="choiceR">
-											<label class="radio p1"><input type="radio" name="radio" value="1" checked>大家居<i></i></label>
+											<label class="radio p1"><input type="radio" name="radio" value="1">大家居<i></i></label>
+										</div>
+									</li>
+									<li>
+										<div class="choiceR">
+											<label class="radio p1"><input type="radio" name="radio" value="1">衣柜<i></i></label>
+										</div>
+									</li>
+									<li>
+										<div class="choiceR">
+											<label class="radio p1"><input type="radio" name="radio" value="1">橱柜<i></i></label>
+										</div>
+									</li>
+									<li>
+										<div class="choiceR">
+											<label class="radio p1"><input type="radio" name="radio" value="1">衣柜<i></i></label>
+										</div>
+									</li>
+									<li>
+										<div class="choiceR">
+											<label class="radio p1"><input type="radio" name="radio" value="1">橱柜<i></i></label>
+										</div>
+									</li>
+									<li>
+										<div class="choiceR">
+											<label class="radio p1"><input type="radio" name="radio" value="1">大家居<i></i></label>
 										</div>
 									</li>
 									<li>
@@ -149,6 +174,12 @@
 								<a href="###" isOpen='false'><img src="img/ms.png"/></a>
 							</div>
 							<div class="clearl"></div>
+						</div>
+						<div class="twoInput">
+							<div class="twoInputIn">
+								<p></p>
+								<input />
+							</div>
 						</div>
 					</div>
 					<div class="sBRight floatl">
