--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 								<a href="###">业务中心</a>
 							</li>
 							<li>
-								<a href="###">品质服务</a>
+								<a href="server.html">品质服务</a>
 							</li>
 							<li>
-								<a href="###">加入诗尼曼</a>
+								<a href="join.html">加入诗尼曼</a>
 							</li>
 							<li>
 								<a href="###">社会关系</a>
@@ -48,7 +48,7 @@
 								<a href="center.html">资讯中心</a>
 							</li>
 							<li>
-								<a href="###">关于诗尼曼</a>
+								<a href="about.html">关于诗尼曼</a>
 							</li>
 							<li>
 								<a href="###" class="imgBtn"><img  src="img/more.png"/></a>
