--- a/center.html
+++ b/center.html
@@ -14,7 +14,7 @@
 	    <link rel="stylesheet" href="css/center.css" />	   
 	    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	    <script type="text/javascript" src="js/swiper-3.4.2.min.js" ></script>
-		<title>首页</title>
+		<title>咨询中心</title>
 	</head>
 	<body>
 		<!--导航-->
@@ -34,10 +34,10 @@
 							<a href="###">业务中心</a>
 						</li>
 						<li>
-							<a href="###">品质服务</a>
+							<a href="server.html">品质服务</a>
 						</li>
 						<li>
-							<a href="###">加入诗尼曼</a>
+							<a href="join.html">加入诗尼曼</a>
 						</li>
 						<li>
 							<a href="###">社会关系</a>
@@ -49,7 +49,7 @@
 							<a href="center.html">资讯中心</a>
 						</li>
 						<li>
-							<a href="###">关于诗尼曼</a>
+							<a href="about.html">关于诗尼曼</a>
 						</li>
 						<li>
 							<a href="###" class="imgBtn"><img src="img/more.png" /></a>
