--- a/join.html
+++ b/join.html
@@ -13,7 +13,7 @@
 	    <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 	    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	    <script type="text/javascript" src="js/swiper-3.4.2.min.js" ></script>
-		<title>首页</title>
+		<title>加入诗尼曼</title>
 	</head>
 	<body>
 		<div id="banner">
@@ -27,17 +27,17 @@
 					</div>
 					<div class="floatr navR">
 						<ul>
-							<li class="nActive">
-								<a href="###"  >首页</a>
+							<li>
+								<a href="index.html">首页</a>
 							</li>
 							<li>
 								<a href="###">业务中心</a>
 							</li>
 							<li>
-								<a href="###">品质服务</a>
+								<a href="server.html">品质服务</a>
 							</li>
-							<li>
-								<a href="###">加入诗尼曼</a>
+							<li class="nActive">
+								<a href="join.html">加入诗尼曼</a>
 							</li>
 							<li>
 								<a href="###">社会关系</a>
@@ -46,10 +46,10 @@
 								<a href="###">投资者关系</a>
 							</li>
 							<li>
-								<a href="###">资讯中心</a>
+								<a href="center.html">资讯中心</a>
 							</li>
 							<li>
-								<a href="###">关于诗尼曼</a>
+								<a href="about.html">关于诗尼曼</a>
 							</li>
 							<li>
 								<a href="###" class="imgBtn"><img  src="img/more.png"/></a>
