--- a/server.html
+++ b/server.html
@@ -19,7 +19,7 @@
 	    <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
     	<script src="http://webapi.amap.com/maps?v=1.3&key=5433dcc2bc76f4bfae5b9b20179efac5"></script>
     	<script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script> 
-		<title>首页</title>
+		<title>品质服务</title>
 	</head>
 	<body>
 		<div id="banner">
@@ -34,16 +34,16 @@
 					<div class="floatr navR">
 						<ul>
 							<li>
-								<a href="###"  >首页</a>
+								<a href="index.html"  >首页</a>
 							</li>
 							<li>
 								<a href="###">业务中心</a>
 							</li>
 							<li class="nActive">
-								<a href="###">品质服务</a>
+								<a href="server.html">品质服务</a>
 							</li>
 							<li>
-								<a href="###">加入诗尼曼</a>
+								<a href="join.html">加入诗尼曼</a>
 							</li>
 							<li>
 								<a href="###">社会关系</a>
@@ -52,10 +52,10 @@
 								<a href="###">投资者关系</a>
 							</li>
 							<li>
-								<a href="###">资讯中心</a>
+								<a href="center.html">资讯中心</a>
 							</li>
 							<li>
-								<a href="###">关于诗尼曼</a>
+								<a href="about.html">关于诗尼曼</a>
 							</li>
 							<li>
 								<a href="###" class="imgBtn"><img  src="img/more.png"/></a>
@@ -193,7 +193,7 @@
 			
 		</div>
 		<!--服务-->
-		<div id="server" style="display: none;">
+		<div id="server" >
 			<div class="choice">
 				<ul>
 					<li>
@@ -357,29 +357,23 @@
 						</div>	
 						<div class="suggest"  style="display: none;">
 							<div class="title">
-								<p>我要定制</p>
+								<p>意见反馈</p>
 							</div>
 							<div class="oneInput">
-								<p><span>*</span>安装地址：</p>
+								<p><span>*</span>您的姓名：</p>
 								<input type="text" />
 							</div>	
 							<div class="oneInput">
-								<p><span>*</span>安装地址：</p>
+								<p><span>*</span>联系方式：</p>
 								<input type="text" />
 							</div>
 							<div class="oneInput">
-								<p><span>*</span>安装地址：</p>
+								<p><span>*</span>所在城市：</p>
 								<input type="text" />
 							</div>
 							<div class="textarea">
 								<p><span>*</span>留言备注：</p>
 								<textarea></textarea>
-							</div>
-							<div class="file">
-								<p><span>*</span>上传附件：</p>				
-								<button>选择文件</button>
-								<span>未选择文件</span>
-								<input type="file" class="files"/>
 							</div>
 							<div class="btnBox">
 								<button class="btn">提交</button>
@@ -394,139 +388,8 @@
 				</div>
 			</div>
 		</div>
-		<!--公司介绍 品牌历程 品牌荣誉 营销网络-->
-		<div id="fourPart" style="display: none;">
-			<!--营销网络-->
-			<div class="net">
-				<div class="netNavs">
-					<ul>
-						<li>
-							<button>公司介绍</button>
-						</li>
-						<li>
-							<button>品牌历程</button>
-						</li>
-						<li>
-							<button>品牌荣誉</button>
-						</li>
-						<li>
-							<button class="btnActive">营销网络</button>
-						</li>
-					</ul>
-					<div class="clearl"></div>
-				</div>
-				<div class="bigTitle">
-					<ul>
-						<li>
-							<p class="bt">网络营销</p>
-						</li>
-						<li>
-							<p class="st">Network marketing</p>
-						</li>
-						<li>
-							<span></span>
-						</li>
-					</ul>
-				</div>
-				<div class="moreChoice">
-					<div class="floatl short">
-						<p isOpen='false'>省份</p>
-						<img src="img/ms.png" />
-						<div class="profess">
-							<ul>
-								<li>
-									<p class="p1">地区1</p>
-								</li>
-								<li>
-									<p class="p1">地区2</p>
-								</li>
-								<li>
-									<p class="p1">地区3</p>
-								</li>
-								<li>
-									<p class="p1">地区4</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="floatl short">
-						<p isOpen='false'>城市</p>
-						<img src="img/ms.png" />
-						<div class="profess">
-							<ul>
-								<li>
-									<p class="p1">职业分类1</p>
-								</li>
-								<li>
-									<p class="p1">职业分类2</p>
-								</li>
-								<li>
-									<p class="p1">职业分类3</p>
-								</li>
-								<li>
-									<p class="p1">职业分类4</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="floatl long">
-						<input type="search" placeholder="职位关键词" />
-						<button></button>
-					</div>
-					<div class="clearl"></div>
-				</div>
-				<div class="storeList">
-					<table class="more" style="display: none;">
-						<tr>
-							<td>专卖店名称</td>
-							<td>专卖店地址</td>
-							<td>营业时间</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-					</table>
-					<table class="nomore">
-						<tr>
-							<td>专卖店名称</td>
-							<td>专卖店地址</td>
-							<td>营业时间</td>
-						</tr>
-						<tr>
-							<td colspan="3">
-								<img src="img/nomore.png" />
-								<p>很抱歉，该地区暂时没有门店！</p>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			
-		</div>
 		<!--定制服务-->
-		<div id="specialServer">
+		<div id="specialServer" style="display: none;">
 			<div class="bigTitle">
 				<ul>
 					<li>
