--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	    <link rel="stylesheet" href="css/reset.min.css" />
 	    <link rel="stylesheet" href="css/public.css" />
 	    <link rel="stylesheet" href="css/index.css" />
+	    <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 	    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	    <script type="text/javascript" src="js/swiper-3.4.2.min.js" ></script>
 		<title>首页</title>
@@ -83,32 +84,62 @@
 			</div>
 			<div class="floatl">
 				<a href="###">
-					<div></div><p>大家居</p>
+					<div>
+						<div>
+							<img src="img/centers.png" />
+						</div>
+					</div>
+					<p>大家居</p>
 				</a>
 			</div>
 			<div class="floatl">
 				<a href="###">
-					<div></div><p>衣柜</p>
+					<div>
+						<div>
+							<img src="img/centers.png" />
+						</div>
+					</div>
+					<p>衣柜</p>
 				</a>
 			</div>
 			<div class="floatl">
 				<a href="###">
-					<div></div><p>橱柜</p>
+					<div>
+						<div>
+							<img src="img/centers.png" />
+						</div>
+					</div>
+					<p>橱柜</p>
 				</a>
 			</div>
 			<div class="floatl">
 				<a href="###">
-					<div></div><p>门窗</p>
+					<div>
+						<div>
+							<img src="img/centers.png" />
+						</div>
+					</div>
+					<p>门窗</p>
 				</a>
 			</div>
 			<div class="floatl">
 				<a href="###">
-					<div></div><p>全优家品</p>
+					<div>
+						<div>
+							<img src="img/centers.png" />
+						</div>
+					</div>
+					<p>全优家品</p>
 				</a>
 			</div>
 			<div class="floatl">
 				<a href="###">
-					<div></div><p>工程案例</p>
+					<div>
+						<div>
+							<img src="img/centers.png" />
+						</div>
+					</div>
+					<p>工程案例</p>
 				</a>
 			</div>
 			<div class="clearl"></div>
@@ -120,7 +151,9 @@
 					<div class="moreFun">
 						<img alt="诗尼曼" src="img/IndexJoin01.jpg" />
 						<a href="###">
-							<img src="img/joining.png" />
+							<div class="joiningBox">
+								<img src="img/centers.png" />
+							</div>
 							<p>招商加盟</p>
 						</a>
 					</div>
@@ -147,7 +180,9 @@
 							<div class="moreFun">
 								<img alt="诗尼曼" src="img/IndexJoin02.jpg" />
 								<a href="###">
-									<img src="img/business.png" />
+									<div class="businessBox">
+										<img src="img/centers.png" />
+									</div>		
 									<p>全国营销</p>
 								</a>
 							</div>
@@ -156,7 +191,9 @@
 							<div class="moreFun">
 								<img alt="诗尼曼" src="img/IndexJoin03.jpg" />
 								<a href="###">
-									<img src="img/find.png" />
+									<div class="findBox businessBox">
+										<img src="img/centers.png" />
+									</div>
 									<p>空白区域查询</p>
 								</a>
 							</div>
@@ -189,7 +226,9 @@
 							<div class="moreFun">
 								<img alt="诗尼曼" src="img/IndexJoin02.jpg" />
 								<div class="imgPop">
-									<img src="img/order.png" />
+									<div class="orderBox">
+										<img src="img/centers.png" />
+									</div>
 									<p>我爱定制</p>
 									<div align="center">
 										<ul class="od">
@@ -228,7 +267,9 @@
 							<div class="moreFun">
 								<img alt="诗尼曼" src="img/IndexJoin03.jpg" />
 								<a href="###">
-									<img src="img/server.png" />
+									<div class="serverBox businessBox">
+										<img src="img/centers.png" />
+									</div>
 									<p>品质服务</p>
 								</a>
 							</div>
@@ -240,7 +281,9 @@
 					<div class="moreFun">
 						<img alt="诗尼曼" src="img/IndexJoin01.jpg" />
 						<a href="###">
-							<img src="img/loveOrder.png" />
+							<div class="loveOrderBox">
+								<img src="img/centers.png" />
+							</div>
 							<p>品质家，爱定制</p>
 						</a>
 					</div>
