--- a/social.html
+++ b/social.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 		<meta content="yes" name="apple-mobile-web-app-capable"/>
 	    <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
-	    <meta content="telephone=no" name="format-detection"/>    
-	    <link rel="stylesheet" href="css/demo.css" />
-		<link rel="stylesheet" href="css/ydui.css" />
-		<link rel="stylesheet" href="lib/css/layui.css" />
+	    <meta content="telephone=no" name="format-detection"/>
 	    <link rel="stylesheet" href="css/reset.min.css" />
 	    <link rel="stylesheet" href="css/public.css" />
-	    <link rel="stylesheet" href="css/about.css" />   
-	    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
+	    <link rel="stylesheet" href="css/social.css" />
 	    <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
-		<title>关于诗尼曼</title>
+	    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<title>首页</title>
 	</head>
 	<body>
 		<div id="banner">
@@ -25,40 +20,40 @@
 				<nav>
 					<div class="floatl logoL">
 						<a href="index.html">
-							<img src="img/logobb.png" />
+							<img src="img/logobb.png" style="display: block;"/>
 						</a>
 					</div>
 					<div class="floatr navR">
 						<ul>
 							<li>
-								<a href="index.html"  >首页</a>
+								<a href="###"  >首页</a>
 							</li>
 							<li>
 								<a href="###">业务中心</a>
 							</li>
 							<li>
-								<a href="server.html">品质服务</a>
+								<a href="###">品质服务</a>
 							</li>
 							<li>
-								<a href="join.html">加入诗尼曼</a>
+								<a href="###">加入诗尼曼</a>
 							</li>
-							<li>
-								<a href="###">社会责任</a>
+							<li class="nActive">
+								<a href="###" >社会责任</a>
 							</li>
 							<li>
 								<a href="###">投资者关系</a>
 							</li>
 							<li>
-								<a href="center.html">资讯中心</a>
-							</li>
-							<li class="nActive">
-								<a href="about.html">关于诗尼曼</a>
+								<a href="###">资讯中心</a>
 							</li>
 							<li>
-								<a href="###" class="imgBtn"><img  src="img/more.png"/></a>
+								<a href="###">关于诗尼曼</a>
 							</li>
 							<li>
-								<a href="###" class="imgBtn"><img  src="img/search.png"/></a>
+								<a href="###" class="imgBtn"><img  src="img/moreB.png"/></a>
+							</li>
+							<li>
+								<a href="###" class="imgBtn"><img  src="img/searchB.png"/></a>
 							</li>
 						</ul>
 					</div>
@@ -66,148 +61,49 @@
 				</nav>
 			</header>
 		<!--轮播图-->
-			<img src="img/serverBanner.jpg" />
+			<img src="img/social.jpg"/>
 		</div>
-		<!--公司介绍 品牌历程 品牌荣誉 营销网络-->
-		<div id="fourPart">
-			<!--营销网络-->
-			<div class="net">
-				
-				<div class="netNavs">
-					<ul>
-						<li>
-							<button>公司介绍</button>
-						</li>
-						<li>
-							<button>品牌历程</button>
-						</li>
-						<li>
-							<button>品牌荣誉</button>
-						</li>
-						<li>
-							<button class="btnActive">营销网络</button>
-						</li>
-					</ul>
-					<div class="clearl"></div>
-				</div>
-				<div class="bigTitle">
-					<ul>
-						<li>
-							<p class="bt">网络营销</p>
-						</li>
-						<li>
-							<p class="st">Network marketing</p>
-						</li>
-						<li>
-							<span></span>
-						</li>
-					</ul>
-				</div>
-				<script type="text/javascript" src="js/map/jquery-1.7.1.min.js" ></script>
-				<script type="text/javascript" src="js/map/map.js" ></script>
-				<script type="text/javascript" src="js/map/raphael-min.js" ></script>
-				<div class="map">
-		            <div id="map_container"></div>
-				</div>  
-				<div class="moreChoice">
-					<div class="floatl short">
-						<img src="img/ms.png" />
-						<p isOpen='false' class="provice">省份</p>					
-						<div class="profess">
-							<ul>
-								<li>
-									<p class="p1">地区1</p>
-								</li>
-								<li>
-									<p class="p1">地区2</p>
-								</li>
-								<li>
-									<p class="p1">地区3</p>
-								</li>
-								<li>
-									<p class="p1">地区4</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="floatl short">
-						<img src="img/ms.png" />
-						<p isOpen='false'>城市</p>						
-						<div class="profess">
-							<ul>
-								<li>
-									<p class="p1">职业分类1</p>
-								</li>
-								<li>
-									<p class="p1">职业分类2</p>
-								</li>
-								<li>
-									<p class="p1">职业分类3</p>
-								</li>
-								<li>
-									<p class="p1">职业分类4</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="floatl long">
-						<input type="search" placeholder="请输入关键字" />
-						<button></button>
-					</div>
-					<div class="clearl"></div>
-				</div>
-				<div class="storeList">
-					<table class="more" style="display: none;">
-						<tr>
-							<td>专卖店名称</td>
-							<td>专卖店地址</td>
-							<td>营业时间</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-						<tr>
-							<td>简阳诗尼曼专卖店</td>
-							<td>四川省成都市简阳县石桥红星美凯龙2楼</td>
-							<td>10：00—21：00</td>
-						</tr>
-					</table>
-					<table class="nomore">
-						<tr>
-							<td>专卖店名称</td>
-							<td>专卖店地址</td>
-							<td>营业时间</td>
-						</tr>
-						<tr>
-							<td colspan="3">
-								<div class="nomore">
-									<img src="img/centers.png" />
-								</div>
-								<p>很抱歉，该地区暂时没有门店！</p>
-							</td>
-						</tr>
-					</table>
+		<section id="idea">
+			<div class="bigTitle">
+				<ul>
+					<li>
+						<p class="bt">公益理念</p>
+					</li>
+					<li>
+						<p class="st">Good idea</p>
+					</li>
+					<li>
+						<span></span>
+					</li>
+				</ul>
+			</div>
+			<div class="heartBox">
+				<img src="img/heart.jpg" />
+				<div class="hContent">
+					<p>诗尼曼全屋定制作为行业先锋，成立伊始便致力于环保公益事业，白血病光头行动、梦想读书站、为爱筑家倡议等公益活动影响深远。2015年，诗尼曼签约著名影视巨星、公益达人海清担任品牌形象代言人，在全国范围更进一步开拓公益环保事业，秉承“引领时尚家居，打造健康生活”的企业使命，以切身行动将企业的责任心和爱心回馈社会！</p>
 				</div>
 			</div>
-			
-		</div>
+		</section>
+		<section id="road">
+			<div class="bigTitle">
+				<ul>
+					<li>
+						<p class="bt">公益之路</p>
+					</li>
+					<li>
+						<p class="st">The road to public welfare</p>
+					</li>
+					<li>
+						<span></span>
+					</li>
+				</ul>
+			</div>
+			<div>
+				<div class="loadBar">
+					
+				</div>
+			</div>
+		</section>
 		<!--侧边导航-->
 		<div id="rightNav">
 			<div class="rNavChild">
@@ -470,6 +366,6 @@
 			</div>
 		</footer>
 		<script type="text/javascript" src="js/public.js" ></script>
-		<script type="text/javascript" src="js/about.js" ></script>		
+		<script type="text/javascript" src="js/social.js" ></script>
 	</body>
 </html>
